styles.css
/* ... */
.openstudio-content-view-container .maximize img {
    max-width: 100%;
}

.openstudio-content-view-date {
    font-size: 0.85714em;
    color: #676463;
    float: left;
}

.openstudio-content-view-maximize-box {
    float: right;
    line-height: 13px;
}

.openstudio-content-view-maximize {
    cursor: pointer;
    vertical-align: middle;
}

.openstudio-content-view-description {
    color: #000000;
    font-size: 1em;
    margin-top: 10px;
}

.openstudio-content-view-tags-container {
    padding-top: 7px;
}


.openstudio-content-view-tags {
    width: 55%;
    float: left;
    padding-bottom: 13px;
}

.openstudio-content-view-tag-item {
    display: inline-block;
    margin: 0 0 5px;
    padding: 0;
}

.openstudio-content-view-tag-item > li {
    background: #ddf0f8 none repeat scroll 0 0;
    display: inline-block;
    margin: 0 5px 10px 0;
    padding: 4px 10px 5px;
    position: relative;
    color: #0b55a8;
}

.openstudio-folder-global-background .openstudio-content-view-tag-item > li {
    background: #e5e8ee;
}

.openstudio-content-view-archive {
    float: right;
    margin-bottom: 27px;
    margin-right: -10px;
}

.openstudio-content-view-archive > input:first-child {
    margin-right: 5px;
}

.openstudio-content-view-animation-icons {
    border-top: 1px solid #d4d2d2;
    border-bottom: 1px solid #d4d2d2;
    padding: 15px 0px 11px 0px;
}

.openstudio-content-view-icon {
    width: 40px;
    height: 40px;
}

.openstudio-content-view-animation-icons-left {
    float: left;
}

.openstudio-content-view-animation-icons-right {
    float: right;
}

.openstudio-content-view-flag-icon {
    background-color: transparent;
    font-size: 1em;
    color: #0b55a8;
    display: inline-block;
    height: 40px;
    width: auto;
    border: none;
    cursor: pointer;
}

.openstudio-content-view-icon-favourite {
    margin-left: 15px;
}

.openstudio-content-view-icon-inspiration {
    margin-left: 8px;
}

.openstudio-content-view-flag-icon span {
    display: block;
    width: 100%;
}

.openstudio-content-view-flag-icon span img {
    height: 40px;
    width: 40px;
    margin: 0 auto;
    display: block;
}

.openstudio-content-view-flag-icon span.openstudio-content-view-icon-inactive-image,
.openstudio-content-view-flag-icon.has-hover:hover .openstudio-content-view-icon-active-image,
.openstudio-content-view-flag-icon.openstudio-content-view-icon-active span.openstudio-content-view-icon-active-image {
    display: block;
}

.openstudio-content-view-flag-icon span.openstudio-content-view-icon-active-image,
.openstudio-content-view-flag-icon.has-hover:hover .openstudio-content-view-icon-inactive-image,
.openstudio-content-view-flag-icon.openstudio-content-view-icon-active span.openstudio-content-view-icon-inactive-image {
    display: none;
}

.openstudio-content-view-icon-copies {
    margin-right: 17px;
    cursor: default;
}

.openstudio-content-view-icon-views {
    cursor: default;
    margin-right: 12px;
}

.openstudio-content-view-actions {
    padding-top: 28px;
}

.path-mod-openstudio .openstudio-content-view-restore-button,
.path-mod-openstudio .openstudio-content-view-edit-button,
.path-mod-openstudio .openstudio-content-view-delete-button,
.path-mod-openstudio .openstudio-delete-content-version,
.path-mod-openstudio .openstudio-content-view-version-button {
    margin-right: 5px;
}

.path-mod-openstudio .openstudio-content-view-edit-button-link:hover,
.path-mod-openstudio .openstudio-content-view-version-button-link:hover {
    text-decoration: none;
    outline: none;
}

.path-mod-openstudio .openstudio_contentform_tag .fitemtitle {
    margin-top: 32px;
}

.path-mod-openstudio .openstudio-add-new-container .openstudio-available {
    font-size: 0.85714em;
    color: #312b39;
    margin-bottom: 30px;
}

.openstudio-content-view-block {
    height: 34px;
    background: #bfe2ef;
    cursor: pointer;
    color: #0b55a8;
    font-family: Arial;
    font-weight: normal;
    border-left: none;
    border-right: none;
    background-image: url([[pix:t/expanded]]);
    border-left: 0 none;
    border-right: medium none;
    background-size: 15px 15px;
    background-color: #bfe2ef;
    background-repeat: no-repeat;
    background-position: right 15px center;
}

.openstudio-content-view-block-content {
    margin-bottom: 27px;
}

.openstudio-content-view-block-post-owner {
    background: #ddf0f8 none repeat scroll 0 0;
    height: 100px;
}

.openstudio-content-view-secondary .collapsed {
    background-image: url([[pix:t/collapsed]]);
}

.openstudio-content-view-block a,
.openstudio-content-view-block a:hover,
.openstudio-content-view-block a:focus{
    color: #002158;
    font-weight: normal;
    padding-left: 15px;
    font-size: 1.28571em;
    line-height: 35px;
    text-decoration: none;
}

.openstudio-content-view-user-picture {
    padding: 15px;
    float: left;
    display: inline-block;
}

.openstudio-content-view-block span {
    color: #002158;
    font-weight: normal;
    padding-left: 15px;
    font-size: 1.28571em;
    line-height: 35px;
    text-decoration: none;
}

.openstudio-content-view-user-picture img {
    width: 64px;
    height: 100%;
}

.openstudio-content-view-user-info {
    margin-top: 13px;
}

.openstudio-content-view-user-info-name {
    font-size: 0.92857em;
    font-family: Arial;
    font-weight: Bold;
    color: #312b39;
    line-height: 17px;
    margin-bottom: -3px;
    margin-top: 0px;
}

.openstudio-content-view-user-info-view {
    font-size: 0.85714em;
    color: #0b55a8;
    border-right: none;
    background-image: url([[pix:t/right]]);
    border-left: 0 none;
    border-right: medium none;
    background-size: 10px 10px;
    background-color: transparent;
    background-repeat: no-repeat;
    background-position: right;
    display: inline-block;
    padding-right: 16px;
}

.openstudio-content-view-date-box {
    margin-top: 10px;
}
/* ... */

